--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^4.0.4",
     "handlebars": "^4.7.6",
-    "mongoose": "^5.2.17"
+    "mongoose": "^5.2.17",
+    "pug": "^3.0.0"
   }
 }
