--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-mongodb-session": "^2.3.3",
+    "csurf": "^1.11.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^4.0.4",
+    "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
     "mongoose": "^5.2.17",
     "pug": "^3.0.0"
