--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI = "mongodb+srv://renato462:8ZnxDMjtNJke5BZK@cluster0-4srg4.mongodb.net/rent?retryWrites=true&w=majority"
 PORT = 4000
+ITEMS_PER_PAGE = 5
